--- a/assets/translations/tg.json
+++ b/assets/translations/tg.json
@@ -1,7 +1,3 @@
 {
-    "welcome": "Привет!",
-    "profile": {
-        "title": "Профиль",
-        "followers": "Подписчики: {count}"
-    }
+    "your_story": "ваша история"
 }
